HTML mostly Done

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -258,11 +258,13 @@
 <button class="back-button" onclick="history.back()">
       <i class="fas fa-arrow-left"></i>
       </button>
-
-    </button>
     <i class="fas fa-train temp-icon"></i>
     <div class="header-title">E Yatra: Train Ticket System</div>
-    <i class="fas fa-user-circle profile-icon"></i>
+    <form action="admin/admin.html">
+	    <button class="back-button">
+	    <i class="fas fa-user-circle profile-icon"></i>
+	    </button>
+    </form>
 </header>
 
 <main>
